# DeAuth

./: README.md
impl/userbadge/ESP32-userbadge/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig.old.11.14
impl/userbadge/ESP32-userbadge/main/: CMakeLists.txt  main.c
impl/userbadge/NXP/: .project
impl/userbadge/NXP/.mcuxpressoide_packages_support/: crt_directory.xml  info.properties
impl/userbadge/NXP/.mcuxpressoide_packages_support/LPC55S69_support/: info.properties
impl/userbadge/NXP/.metadata/: version.ini
impl/userbadge/NXP/freertos_blinky_ns/: .cproject  freertos_blinky_ns LinkServer Debug.launch
impl/userbadge/NXP/freertos_blinky_ns/Debug/: LPC55S69_part.xml  freertos_blinky_ns.axf  freertos_blinky_ns.map  freertos_blinky_ns_Debug.ld  freertos_blinky_ns_Debug_memory.ld  makefile  sources.mk
impl/userbadge/NXP/freertos_blinky_s/: .cproject  freertos_blinky_s LinkServer Debug.launch
impl/userbadge/NXP/freertos_blinky_s/Debug/: LPC55S69_part.xml  freertos_blinky_s.axf  makefile  (+5 more)
impl/userbadge/QM33110W/Drivers/: README.md
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/: README.md  pyproject.toml
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/lib/uqt-utils/: pyproject.toml
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/device/get_cal/: get_cal.py
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/device/get_cap/: README.md
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/device/get_device_info/: README.md
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/device/load_cal/: load_cal.py
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/device/load_cal/calib_files/DWM3001CDK/: README.md  dual-hoe_non_aoa.json
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/device/load_cal/calib_files/QM33120WDK1/: jolie_aoa.json
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/device/load_cal/calib_files/Type2AB_EVB/: README.md
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/device/reset_calibration/: README.md  reset_calibration.py
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/device/reset_device/: reset_device.py
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/device/set_config/: set_config.py
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/fira/run_fira_test_per_rx/: run_fira_test_per_rx.py
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/fira/run_fira_test_rx/: README.md
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/fira/run_fira_test_ss_twr/: run_fira_test_ss_twr.py
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/fira/run_fira_twr/: README.md
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/qorvo/: README.md
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/qorvo/run_qorvo_test_tx_cw/: run_qorvo_test_tx_cw.py
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/utils/decode_uci/: decode_uci.py
impl/userbadge/QM33110W/SDK/Tools/uwb-qorvo-tools/scripts/utils/uqt_info/: README.md
impl/workstation/: audit_log.txt  badges.csv  client.py  deauth-lock.service  deauth.py  distance_server.py  install.sh  view_distance.py
impl/workstation/ESP32-Workstation/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
impl/workstation/ESP32-Workstation/main/: main.c
impl/workstation/QM33120W/: README.md
impl/workstation/QM33120W/Drivers/: Changelog.md
impl/workstation/QM33120W/SDK/Tools/uwb-qorvo-tools/lib/uwb-uci/: pyproject.toml
playground/: hashchain.py  hashchain_output.txt  public_key_pavel.pem  userbadge.pem
tamarin/: deauth.spthy  detox.spthy
(+348 files in other folders)
